added Exception folder for errors in api and implemented api service for place in cemetary

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.password=superhaslo2137
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
+#Zmienic create na update pozniej
 spring.jpa.hibernate.ddl-auto=create
